fix problem with ie not showing items when overflow was set to initial

--- a/resources/assets/sass/partials/header-nav.scss
+++ b/resources/assets/sass/partials/header-nav.scss
@@ -76,7 +76,7 @@ header.header {
 
         .filter-dropdown-is-expanded & {
             max-height: 100px;
-            overflow: initial;
+            overflow: visible;
         }
     }
 
